--- a/introduction/intro.html
+++ b/introduction/intro.html
@@ -98,7 +98,7 @@
                         <td></td>
                     </tr>
                     <tr>
-                        <td>Software Requirements</td>
+                        <td>Software Requirements-Created System Dictionary</td>
                         <td></td>
                         <td></td>
                         <td class="bck">X</td>
