--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1254" />
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
     <script type="text/javascript">
         function loadHeader() {
             var header = document.getElementById("HeaderContent");
@@ -18,7 +20,7 @@
                 <h3>Introduction</h3>
                 <ul>
                     <li>
-                        <a href="introduction/intro.html">Proje ile ilgili genel bilgiler</a>
+                        <a href="introduction/intro.html">Project Aim,Scope,Reference</a>
                     </li>
                     <li>
                         <a href="introduction/intro.html#timeline">TimeLine</a>
