--- a/introduction/intro.html
+++ b/introduction/intro.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1254" />
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
     <script type="text/javascript">
         function loadHeader() {
             var header = document.getElementById("HeaderContent");
@@ -8,7 +10,7 @@
     </script>
     <style>
         .bck {
-            background-color: gray 
+            background-color: gray
         }
     </style>
 </head>
