--- a/introduction/intro.html
+++ b/introduction/intro.html
@@ -2,6 +2,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1254" />
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
     <script type="text/javascript">
         function loadHeader() {
             var header = document.getElementById("HeaderContent");
