--- a/introduction/intro.html
+++ b/introduction/intro.html
@@ -1,6 +1,9 @@
 <html>
 <head>
-    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1254" />
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Language" content="TR" />
 
     <script type="text/javascript">
         function loadHeader() {
