--- a/introduction/intro.html
+++ b/introduction/intro.html
@@ -1,11 +1,7 @@
-<html>
+ï»¿<html>
 <head>
-<<<<<<< HEAD
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="Content-Language" content="TR" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">    <meta http-equiv="Content-Language" content="TR" />
 
-=======
->>>>>>> 9575bd2... project created
     <script type="text/javascript">
         function loadHeader() {
             var header = document.getElementById("HeaderContent");
@@ -14,11 +10,8 @@
     </script>
     <style>
         .bck {
-<<<<<<< HEAD
             background-color: gray
-=======
-            background-color: gray 
->>>>>>> 9575bd2... project created
+
         }
     </style>
 </head>
@@ -28,25 +21,25 @@
         <h2>Introduction</h2>
         <br>
         <ul>
-            <li><a href="#amac">Amaç</a></li>
+            <li><a href="#amac">Amaï¿½</a></li>
             <li><a href="#Kapsam">Kapsam</a></li>
             <li><a href="#timeline">Time Line</a></li>
             <li><a href="#Referanslar">Referanslar</a></li>
         </ul>
-        <h4><a name="amac"></a>Amaç</h4>
+        <h4><a name="amac"></a>Amaï¿½</h4>
         <span>
-            Bu döküman,  projenin gereksinim belirlenmesinden baþlayarak
-            kabul teslerine kadar olan süreci belgelendirmeyi amaçlamaktadýr.
+            Bu dï¿½kï¿½man,  projenin gereksinim belirlenmesinden baï¿½layarak
+            kabul teslerine kadar olan sï¿½reci belgelendirmeyi amaï¿½lamaktadï¿½r.
         </span>
         <br>
         <h4 name="Kapsam"><a name="Kapsam"></a>Kapsam</h4>
         <span>
-            Ýris, vücuttaki organ ve dokularýn saðlýk
-            durumu hakkýnda bilgi de verebilmektedir. Diðer pek çok
-            hastalýk gibi, kanda bulunan yüksek kolesterolün iris analizi ile belirlenmesi
-            söz konusudur <a href="#[1]">[1]</a>. Bu projede, bireylere ait  göz resimleri analiz edilerek
-            yüksek kolesterol ile iris çevresinde oluþan sodyum halkasý arasýndaki iliþki
-            sayesinde kolestrol teþhisi konmaya çalýþýlmaktadýr.
+            ï¿½ris, vï¿½cuttaki organ ve dokularï¿½n saï¿½lï¿½k
+            durumu hakkï¿½nda bilgi de verebilmektedir. Diï¿½er pek ï¿½ok
+            hastalï¿½k gibi, kanda bulunan yï¿½ksek kolesterolï¿½n iris analizi ile belirlenmesi
+            sï¿½z konusudur <a href="#[1]">[1]</a>. Bu projede, bireylere ait  gï¿½z resimleri analiz edilerek
+            yï¿½ksek kolesterol ile iris ï¿½evresinde oluï¿½an sodyum halkasï¿½ arasï¿½ndaki iliï¿½ki
+            sayesinde kolestrol teï¿½hisi konmaya ï¿½alï¿½ï¿½ï¿½lmaktadï¿½r.
         </span>
         <br>
         <h4><a name="timeline"></a>Time Line</h4>
@@ -108,11 +101,7 @@
                         <td></td>
                     </tr>
                     <tr>
-<<<<<<< HEAD
                         <td>Software Requirements-Created System Dictionary</td>
-=======
-                        <td>Software Requirements</td>
->>>>>>> 9575bd2... project created
                         <td></td>
                         <td></td>
                         <td class="bck">X</td>
@@ -195,7 +184,7 @@
         <br>
         <h4><a name="Referanslar"></a>Referanslar</h4>
         <span>
-            <a name="[1]"></a>[1]  Ýris Analizi ile Kandaki Yüksek Kolesterolün Belirlenmesi Burak Kürþat Gül1, Çetin Kurnaz2 1,2Elektrik ve Elektronik Mühendisliði Bölümü, Ondokuz Mayýs Üniversitesi, Samsun, Türkiye
+            <a name="[1]"></a>[1]  ï¿½ris Analizi ile Kandaki Yï¿½ksek Kolesterolï¿½n Belirlenmesi Burak Kï¿½rï¿½at Gï¿½l1, ï¿½etin Kurnaz2 1,2Elektrik ve Elektronik Mï¿½hendisliï¿½i Bï¿½lï¿½mï¿½, Ondokuz Mayï¿½s ï¿½niversitesi, Samsun, Tï¿½rkiye
         </span>
     </div>    
 </body>
