--- a/header/header.html
+++ b/header/header.html
@@ -3,7 +3,7 @@
         Detection Iris Anomaly System<br>
     </h1>
     <h1 style="text-align: center;">Project Portfolio</h1>
-    <hr style="width: 100%; height: 2px;">Fall, 2018, Student: Cantekin Çelikhasý-175172002
+    <hr style="width: 100%; height: 2px;">Fall, 2018, Student: Cantekin Ã‡elikhasÄ±-175172002
 
         <br />
     <a target="_parent" href="../index.html">Index Page</a>
