--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="tr" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=windows-1254" />
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="Content-Language" content="TR" />
+    <meta charset="utf-8" />
     <script type="text/javascript">
         function loadHeader() {
             var header = document.getElementById("HeaderContent");
@@ -14,50 +13,52 @@
 <body onload="loadHeader()">
     <div id="HeaderContent"></div>
     <div id="container">
-        <h2>Portfolio Overview</h2>       
+        <h2>Portfolio Overview</h2>
         <br>
         <ul>
-
             <li>
                 <h3>Introduction</h3>
                 <ul>
                     <li>
+
                         <a href="introduction/intro.html">Project Aim,Scope,Reference</a>
+
                     </li>
                     <li>
                         <a href="introduction/intro.html#timeline">TimeLine</a>
                     </li>
                 </ul>
             </li>
-            <li> <h3>Desing</h3> 
-                 <ul>
-                     <li>
-                         <a href="reqs/requirements1.html">
-                             Requirements I - System
-                             Object Descriptions
-                             and Message Dictionary
-                         </a>
-                     </li>
-                     <li>
-                         <a href="reqs/requirements2.html">
-                             Requirements II - Distributed
-                             Controller Requirements
-                         </a>
-                     </li>
+            <li>
+                <h3>Desing</h3>
+                <ul>
+                    <li>
+                        <a href="design/requirements.html">
+                            Requirements I - System
+                            Object Descriptions
+                            <!--and Message Dictionary-->
+                        </a>
+                    </li>
+                    <!--<li>
+                        <a href="reqs/requirements2.html">
+                            Requirements II - Distributed
+                            Controller Requirements
+                        </a>
+                    </li>
 
-                     <li>
-                         <a href="architecture/architecture.html">Architecture Diagram</a>
-                     </li>
-                     <li>
-                         <a href="architecture/usecases.html">Use Cases</a>
-                     </li>
-                     <li>
-                         <a href="scen_sd/scen_sd.html">
-                             Scenarios and Sequence Diagrams
-                         </a>
-                     </li>
+                    <li>
+                        <a href="architecture/architecture.html">Architecture Diagram</a>
+                    </li>
+                    <li>
+                        <a href="architecture/usecases.html">Use Cases</a>
+                    </li>
+                    <li>
+                        <a href="scen_sd/scen_sd.html">
+                            Scenarios and Sequence Diagrams
+                        </a>
+                    </li>-->
 
-                 </ul>
+                </ul>
             </li>
         </ul>
         <br>
