--- a/introduction/intro.html
+++ b/introduction/intro.html
@@ -1,8 +1,8 @@
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="Content-Language" content="TR" />
+ï»¿<!DOCTYPE html>
 
+<html lang="tr" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8" />
     <script type="text/javascript">
         function loadHeader() {
             var header = document.getElementById("HeaderContent");
@@ -21,28 +21,22 @@
         <h2>Introduction</h2>
         <br>
         <ul>
-            <li><a href="#amac">Amaç</a></li>
-            <li><a href="#Kapsam">Kapsam</a></li>
-            <li><a href="#timeline">Time Line</a></li>
-            <li><a href="#Referanslar">Referanslar</a></li>
+            <li><a href="#amac">Aim</a></li>
+            <li><a href="#Kapsam">Scope</a></li>
+            <li><a href="#timeline">Timeline</a></li>
+            <li><a href="#Referanslar">References</a></li>
         </ul>
-        <h4><a name="amac"></a>Amaç</h4>
+        <h4><a name="amac"></a>Aim</h4>
         <span>
-            Bu döküman,  projenin gereksinim belirlenmesinden baþlayarak
-            kabul teslerine kadar olan süreci belgelendirmeyi amaçlamaktadýr.
+            This document aims to document the process starting from the requirement determination of the project to the acceptance tests.
         </span>
         <br>
-        <h4 name="Kapsam"><a name="Kapsam"></a>Kapsam</h4>
+        <h4><a name="Kapsam"></a>Scope</h4>
         <span>
-            Ýris, vücuttaki organ ve dokularýn saðlýk
-            durumu hakkýnda bilgi de verebilmektedir. Diðer pek çok
-            hastalýk gibi, kanda bulunan yüksek kolesterolün iris analizi ile belirlenmesi
-            söz konusudur <a href="#[1]">[1]</a>. Bu projede, bireylere ait  göz resimleri analiz edilerek
-            yüksek kolesterol ile iris çevresinde oluþan sodyum halkasý arasýndaki iliþki
-            sayesinde kolestrol teþhisi konmaya çalýþýlmaktadýr.
+            Iris can provide information about the health status of organs and tissues in the body. Like many other diseases, high cholesterol in the blood is determined by iris analysis <a href="#[1]">[1]</a>. In this project, we try to cholesterol diagnosis with the association between high cholesterol and the sodium ring formed around the iris by analyzing the iris pictures of an individual.
         </span>
         <br>
-        <h4><a name="timeline"></a>Time Line</h4>
+        <h4><a name="timeline"></a>Timeline</h4>
         <div>
             <table border="1">
                 <thead>
@@ -58,7 +52,7 @@
                         <th>8.Week</th>
                         <th>9.Week</th>
                         <th>10.Week</th>
-                    </tr>                    
+                    </tr>
                 </thead>
                 <tbody>
                     <tr>
@@ -138,7 +132,7 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                    </tr>                  
+                    </tr>
                     <tr>
                         <td>Coding and Development</td>
                         <td></td>
@@ -175,17 +169,19 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td ></td>
+                        <td></td>
                         <td class="bck">X</td>
                     </tr>
                 </tbody>
-            </table>         
+            </table>
         </div>
         <br>
-        <h4><a name="Referanslar"></a>Referanslar</h4>
+        <h4><a name="Referanslar"></a>References</h4>
         <span>
-            <a name="[1]"></a>[1]  Ýris Analizi ile Kandaki Yüksek Kolesterolün Belirlenmesi Burak Kürþat Gül1, Çetin Kurnaz2 1,2Elektrik ve Elektronik Mühendisliði Bölümü, Ondokuz Mayýs Üniversitesi, Samsun, Türkiye
+            <a name="[1]"></a>[1]  Detection of High Level Cholesterol in Blood
+            with Iris Analysis, Burak KÃ¼rÅŸat GÃ¼l1, Ã‡etin Kurnaz2
+            1,2Elektrik ve Elektronik MÃ¼hendisliÄŸi BÃ¶lÃ¼mÃ¼, Ondokuz MayÄ±s Ãœniversitesi, Samsun, TÃ¼rkiye
         </span>
-    </div>    
+    </div>
 </body>
 </html>
