--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                             <!--and Message Dictionary-->
                         </a>
                     </li>
+                    <li>
+                        <a href="design/usecases.html">
+                            UseCases
+                            <!--and Message Dictionary-->
+                        </a>
+                    </li>
 
                 </ul>
    
