Requirements and usecase

--- a/design/usecases.html
+++ b/design/usecases.html
@@ -10,25 +10,175 @@
             header.innerHTML = '<iframe frameborder="no" width= "100% " height= "250" scrolling= "no" src= "../header/header.html" ></iframe > '
         }
     </script>
+    <style>
+        .bck {
+            background-color: gray
+        }
+    </style>
 </head>
 <body onload="loadHeader()">
     <div id="HeaderContent"></div>
     <div id="container">
-        <h2>UseCases</h2>
-        <br/>
+        <h2>UseCases & Usecase-Requiertment Match</h2>
+        <ul>
+            <li><a href="#u1">Usecase-1</a></li>
+            <li><a href="#u2">Usecase-2</a></li>
+            <li><a href="#u3">Usecase-3</a></li>
+            <li><a href="#ur">Usecase & Requirements Match</a></li>
+        </ul>
+
+        <a name="u1"></a>
+
+        <br />
         <ol style="list-style-type:none">
-            <li>U1-U2-U3</li>           
             <li>
-                U4-U5-U6
+                <h2>Use Case 1</h2>
+                <img src="UseCase123.jpg" alt="useCase123" />
             </li>
             <li>
-                U7-U8-U9
+                <a name="u2"></a>
+                <h2>Use Case 2</h2>
+                <img src="UseCase456.jpg" alt="useCase123" />
+            </li>
+            <li>
+                <a name="u3"></a>
+                <h2>Use Case 3</h2>
+                <img src="UseCase789.jpg" alt="useCase123" />
             </li>
         </ol>
-        
-        
+
+
         <br>
         <br>
+        <a name="ur"></a>
+        <h2>Use Case  match Requirements</h2>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th> <a href="requirements.html">Requirements</a> </th>
+                    <td>U1</td>
+                    <td>U2</td>
+                    <td>U3</td>
+                    <td>U4</td>
+                    <td>U5</td>
+                    <td>U6</td>
+                    <td>U7</td>
+                    <td>U8</td>
+                    <td>U9</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>R1</td>
+                    <td class="bck">X</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>R2</td>
+                    <td></td>
+                    <td class="bck">X</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>R3</td>
+                    <td></td>
+                    <td></td>
+                    <td class="bck">X</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>R4</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td class="bck">X</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>R5</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td class="bck">X</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>R6</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td class="bck">X</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>R7</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td class="bck">X</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>R8</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td class="bck">X</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>R9</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td class="bck">X</td>
+                </tr>
+
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
