--- a/design/usecases.html
+++ b/design/usecases.html
@@ -65,12 +65,16 @@
                     <td>U7</td>
                     <td>U8</td>
                     <td>U9</td>
+                    <td>U10</td>
+                    <td>U11</td>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>R1</td>
                     <td class="bck">X</td>
+                    <td class="bck">X</td>
+                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -83,7 +87,9 @@
                 <tr>
                     <td>R2</td>
                     <td></td>
+                    <td></td>
                     <td class="bck">X</td>
+                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -96,7 +102,9 @@
                     <td>R3</td>
                     <td></td>
                     <td></td>
+                    <td></td>
                     <td class="bck">X</td>
+                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -109,7 +117,9 @@
                     <td></td>
                     <td></td>
                     <td></td>
+                    <td></td>
                     <td class="bck">X</td>
+                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -122,7 +132,9 @@
                     <td></td>
                     <td></td>
                     <td></td>
+                    <td></td>
                     <td class="bck">X</td>
+                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -135,6 +147,8 @@
                     <td></td>
                     <td></td>
                     <td></td>
+                    <td></td>
+                    <td class="bck">X</td>
                     <td class="bck">X</td>
                     <td></td>
                     <td></td>
@@ -148,12 +162,16 @@
                     <td></td>
                     <td></td>
                     <td></td>
+                    <td></td>
+                    <td></td>
                     <td class="bck">X</td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>R8</td>
+                    <td></td>
+                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -174,9 +192,10 @@
                     <td></td>
                     <td></td>
                     <td></td>
+                    <td></td>
+                    <td></td>
                     <td class="bck">X</td>
                 </tr>
-
             </tbody>
         </table>
     </div>
