--- a/design/requirements.html
+++ b/design/requirements.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="tr" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -28,7 +28,7 @@
                 R4.	Terminal device should have guide mark for the iris on the screen while photographing.
             </li>
             <li>
-                R5.	Terminal device shall get age of the person.
+                <del> R5.	Terminal device shall get age of the person. </del> 29.10.2018 review, related with R1
             </li>
             <li>
                 R6.	Terminal device shall send the data to the main device.
