--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </li>
                     <li>
                         <a href="introduction/intro.html#timeline">TimeLine</a>
-                    </li>
+                    </li>                   
                 </ul>
             </li>
             <li>
@@ -45,7 +45,9 @@
                             <!--and Message Dictionary-->
                         </a>
                     </li>
-
+                    <li>
+                        <a href="design/architecture.html">Architecture</a>
+                    </li>
                 </ul>
    
         <br>
