--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                     <li>
                         <a href="design/architecture.html">Architecture</a>
                     </li>
+                    <li>
+                        <a href="design/Sequence.html">Scenarios and Sequence Diagrams</a>
+                    </li>
                 </ul>
    
         <br>
