state chart ve class diagramlarının eklenmesi

--- a/design/requirements.html
+++ b/design/requirements.html
@@ -149,7 +149,7 @@
             <tr>
                     <td>CCS</td>
                     <td>mCheckBarcode</td>
-                    <td>Cheking Barcode return T/F</td>
+                    <td>Recognize person from bacode return Person Detail</td>
             </tr>
             <tr>
                     <td>CCS</td>
@@ -158,8 +158,10 @@
             </tr> 
             <tr>
                     <td>CCS</td>
-                    <td>mCheckIdendtity</td>
-                    <td>Recognize person from bacode return Person Detail</td>
+                    <td><del>mCheckIdendtity</del></td>
+                    <td><del>Recognize person from bacode return Person Detail</del>
+                        Not: Review related mCheckBarcode 11.12.2018
+                    </td>
             </tr>
             <tr>
                     <td>CCS</td>
