--- a/design/usecases.html
+++ b/design/usecases.html
@@ -38,7 +38,7 @@
             <li>
                 <a name="u2"></a>
                 <h2>Use Case 2</h2>
-                <h3>NOTE: Review 29.10.2016 U6 not neccesary!!!</h3>
+                <h3 style="color:red">NOTE: Review 29.10.2016 U6 not neccesary!!!</h3>
                 <img src="UseCase456.jpg" alt="useCase123" />
             </li>
             <li>
