--- a/Traceability/StateCharts.html
+++ b/Traceability/StateCharts.html
@@ -53,19 +53,87 @@
                 <tr class="title">
                     <td>Transition </td>
                     <td>Guard</td>
+                    <td>Code Class - Line Number</td>
                 </tr>
                 <tr>
                     <td>T1.1</td>
                     <td>Button ← True</td>
+                    <td>ButtonContol-30</td>
                 </tr>
                 <tr>
-                    <td>T1.2</td>
+                    <td>T1.2 - T1.8</td>
                     <td>Unconditional Transition</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>T1.3</td>
+                    <td>mMode ← Ready</td>
+                    <td>CCS-127</td>
+                </tr>
+                <tr>
+                    <td>T1.4</td>
+                    <td>mMode ← Barcode</td>
+                    <td>CCS-130</td>
+                </tr>
+                <tr>
+                    <td>T1.5</td>
+                    <td>mMode ← Iris</td>
+                    <td>CCS-133</td>
+                </tr>
+                <tr>
+                    <td>T1.6</td>
+                    <td>mMode ← Bussy</td>
+                    <td>CCS-136</td>
+                </tr>
+                <tr>
+                    <td>T1.6</td>
+                    <td>mMode ← Reset</td>
+                    <td>CCS-139</td>
                 </tr>
             </table>
 
             <h4>State</h4>
             <img src="draw/buttoncontrol.jpg">
+            
+            <h4>State Traceability</h4>
+            <table border="1">
+                <tr class="title">
+                    <td>State </td>
+                    <td>Code Class - Line Number</td>
+                </tr>
+                <tr>
+                    <td>S1.1</td>
+                    <td>ButtonControl - 28</td>
+                </tr>
+                <tr>
+                    <td>S1.2</td>
+                    <td>CCS</td>
+                </tr>
+                <tr>
+                    <td>S1.3</td>
+                    <td>CCS - 69</td>
+                </tr>
+                <tr>
+                    <td>S1.4</td>
+                    <td>CCS - 77</td>
+                </tr>
+                <tr>
+                    <td>S1.5</td>
+                    <td>CCS - 83</td>
+                </tr>
+                <tr>
+                    <td>S1.6</td>
+                    <td>CCS - 96</td>
+                </tr>
+                <tr>
+                    <td>S1.7</td>
+                    <td>CCS - 109</td>
+                </tr>
+                <tr>
+                    <td>S1.8</td>
+                    <td>CCS - 140</td>
+                </tr>
+            </table>
 
             <h4>Requirements-to-Statecharts Traceability</h4>
             <table border="1">
@@ -78,9 +146,25 @@
                     <td>R1 - R2</td>
                 </tr>
                 <tr>
-                    <td>S1.1 - S1.2</td>
-                    <td>R1-R2</td>
+                    <td>T1.3</td>
+                    <td>R3</td>
                 </tr>
+                <tr>
+                    <td>T1.4</td>
+                    <td>R1</td>
+                </tr>
+                <tr>
+                    <td>T1.5</td>
+                    <td>R2</td>
+                </tr>
+                <tr>
+                    <td>T1.6</td>
+                    <td>R6</td>
+                </tr>
+                <tr>
+                    <td>T1.7</td>
+                    <td>R3</td>
+                </tr>                
             </table>
         </div>
         <a href="#menu"> goto Menu</a>
@@ -105,24 +189,47 @@
                 <tr class="title">
                     <td>Transition </td>
                     <td>Guard</td>
+                    <td>Code Class - Line Number</td>
                 </tr>
                 <tr>
                     <td>T2.1</td>
                     <td>Camera ← True</td>
+                    <td>CameraContol. - 10</td>
                 </tr>
                 <tr>
                     <td>T2.2</td>
                     <td>TakeImage ← True</td>
+                    <td>CCS - 51</td>
                 </tr>
                 <tr>
                     <td>T2.3</td>
-                    <td>Image ← True</td>
+                    <td>Unconditional Transition</td>
+                    <td></td>
                 </tr>
             </table>
 
             <h4>State</h4>
             <img src="draw/cameracontrol.jpg">
 
+            <h4>State Traceability</h4>
+            <table border="1">
+                <tr class="title">
+                    <td>State </td>
+                    <td>Code Class - Line Number</td>
+                </tr>
+                <tr>
+                    <td>S2.1</td>
+                    <td>CameraControl - 7</td>
+                </tr>
+                <tr>
+                    <td>S2.2</td>
+                    <td>CCS</td>
+                </tr>
+                <tr>
+                    <td>S2.3</td>
+                    <td>CCS - 47</td>
+                </tr>             
+            </table>
             <h4>Requirements-to-Statecharts Traceability</h4>
             <table border="1">
                 <tr class="title">
@@ -134,7 +241,7 @@
                     <td>R1-R2-R3</td>
                 </tr>
                 <tr>
-                    <td>S2.1- S2.2 - S2.3</td>
+                    <td>S2.1- S2.2 - S2.3 S2.4</td>
                     <td>R1-R2-R3</td>
                 </tr>
             </table>
@@ -162,14 +269,17 @@
                 <tr class="title">
                     <td>Transition </td>
                     <td>Guard</td>
+                    <td>Code Class - Line Number</td>
                 </tr>
                 <tr>
                     <td>T3.1</td>
                     <td>Display ← True</td>
+                    <td>DisplayContol - 40</td>
                 </tr>
                 <tr>
                     <td>T3.2</td>
                     <td>mShow ← True</td>
+                    <td>CCS - 44</td>
                 </tr>
                 <tr>
                     <td>T3.3</td>
@@ -180,6 +290,25 @@
             <h4>State</h4>
             <img src="draw/displaycontrol.jpg">
 
+            <h4>State Traceability</h4>
+            <table border="1">
+                <tr class="title">
+                    <td>State </td>
+                    <td>Code Class - Line Number</td>
+                </tr>
+                <tr>
+                    <td>S2.1</td>
+                    <td>DisplayControl - 7</td>
+                </tr>
+                <tr>
+                    <td>S3.2</td>
+                    <td>CCS-45</td>
+                </tr>
+                <tr>
+                    <td>S3.3</td>
+                    <td>DisplayControl - 36</td>
+                </tr>
+            </table>
             <h4>Requirements-to-Statecharts Traceability</h4>
             <table border="1">
                 <tr class="title">
@@ -219,20 +348,37 @@
                 <tr class="title">
                     <td>Transition </td>
                     <td>Guard</td>
+                    <td>Code Class - Line Number</td>
                 </tr>
                 <tr>
                     <td>T4.1</td>
                     <td>mCheckBarcode ← True</td>
+                    <td>CCS - 86</td>
                 </tr>
                 <tr>
                     <td>T4.2</td>
                     <td>Unconditional Transition, return checkResult True/False</td>
+                    <td></td>
                 </tr>
             </table>
 
             <h4>State</h4>
             <img src="draw/barcodecontrol.jpg">
-
+            <h4>State Traceability</h4>
+            <table border="1">
+                <tr class="title">
+                    <td>State </td>
+                    <td>Code Class - Line Number</td>
+                </tr>
+                <tr>
+                    <td>S4.1</td>
+                    <td>CCS - 41</td>
+                </tr>
+                <tr>
+                    <td>S4.2</td>
+                    <td>BarcodeControl-6</td>
+                </tr>                
+            </table>
             <h4>Requirements-to-Statecharts Traceability</h4>
             <table border="1">
                 <tr class="title">
@@ -254,7 +400,7 @@
         <!-- IrisControl -->
         <div>
             <a name="IrisControl"></a>
-            <h3>5-BarcodeControl</h3>
+            <h3>5-IrisControl</h3>
 
             <h4>Input Interface:</h4>
             <ol>
@@ -262,9 +408,7 @@
             </ol>
 
             <h4>Output Interface:</h4>
-            <ol>
-                <!-- <li> Display(v)</li> -->
-            </ol>
+            <ol></ol>
 
             <h4>Guard</h4>
 
@@ -272,20 +416,37 @@
                 <tr class="title">
                     <td>Transition </td>
                     <td>Guard</td>
+                    <td>Code Class - Line Number</td>
                 </tr>
                 <tr>
-                    <td>T4.1</td>
+                    <td>T5.1</td>
                     <td>mCheckIris ← True</td>
+                    <td>CCS - 99</td>
                 </tr>
                 <tr>
-                    <td>T4.2</td>
+                    <td>T5.2</td>
                     <td>Unconditional Transition, return checkResult True/False</td>
+                    <td></td>
                 </tr>
             </table>
 
             <h4>State</h4>
             <img src="draw/iriscontrol.jpg">
-
+            <h4>State Traceability</h4>
+            <table border="1">
+                <tr class="title">
+                    <td>State </td>
+                    <td>Code Class - Line Number</td>
+                </tr>
+                <tr>
+                    <td>S5.1</td>
+                    <td>CCS</td>
+                </tr>
+                <tr>
+                    <td>S5.2</td>
+                    <td>IrisControl-8</td>
+                </tr>
+            </table>
             <h4>Requirements-to-Statecharts Traceability</h4>
             <table border="1">
                 <tr class="title">
@@ -293,11 +454,11 @@
                     <td>Requirements</td>
                 </tr>
                 <tr>
-                    <td>T4.1 - T4.2</td>
+                    <td>T5.1 - T5.2</td>
                     <td>R1</td>
                 </tr>
                 <tr>
-                    <td>S4.1- S4.2</td>
+                    <td>S5.1- S5.2</td>
                     <td>R1</td>
                 </tr>
             </table>
