--- a/design/requirements.html
+++ b/design/requirements.html
@@ -25,7 +25,8 @@
                 R3.	Terminal device shall display the camera image in real time.
             </li>
             <li>
-                R4.	Terminal device should have guide mark for the iris on the screen while photographing.
+                <del>R4. Terminal device should have guide mark for the iris on the screen while photographing. </del>
+                10.12.2018- Review - not neccesary, it is automatically detect
             </li>
             <li>
                 <del> R5.	Terminal device shall get age of the person. </del> 29.10.2018 review, related with R1
