--- a/index.html
+++ b/index.html
@@ -71,8 +71,31 @@
 
                 </ul>
             </li>
+            <li>
+                <h3>Implementation</h3>
+                <ul>
+                    <li>
+
+                        <a href="Code/Code.html">PythonCode</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <h3>Test</h3>
+                <ul>
+                    <li>
+                        <a href="Test/UnitTest.html">Unit Test</a>
+                        
+                        
+
+                    </li>
+                    <li>
+                        <a href="Test/AcceptanceTest.html">Acceptance Test</a>
+                    </li>
+                </ul>
+            </li>
             <br>
-    </div>
+</div>
 </body>
 
 </html>
