--- a/introduction/intro.html
+++ b/introduction/intro.html
@@ -29,7 +29,7 @@
         <h4><a name="amac"></a>Aim</h4>
         <span>
             This document aims to document the process starting from the requirement determination of the project to the acceptance tests.
-
+            <img src="image.PNG" >
         </span>
         <br>
         <h4><a name="Kapsam"></a>Scope</h4>
@@ -183,6 +183,11 @@
             <a name="[1]"></a>[1]  Detection of High Level Cholesterol in Blood
             with Iris Analysis, Burak Kürşat Gül1, Çetin Kurnaz2
             1,2Elektrik ve Elektronik Mühendisliği Bölümü, Ondokuz Mayıs Üniversitesi, Samsun, Türkiye
+            <br>
+            [2] ttps://www.emrealadag.com/makine-ogrenmesi-nedir.html
+            <br>
+            [3] Prof. Philip Koopman http://www.archive.ece.cmu.edu/~ece649/
+
         </span>
     </div>
 </body>
