--- a/header/header.html
+++ b/header/header.html
@@ -1,12 +1,22 @@
-    <h1 style="text-align: center;">MEH-531/FBE-107 Distributed Embedded Systems</h1>
+﻿<!-- <div style="float:left">
+<img src="images.jpg" width=150px>
+</div> -->
+<div style="float:left; margin-left:50px">
     <h1 style="text-align: center;">
         Detection Iris Anomaly System<br>
     </h1>
     <h1 style="text-align: center;">Project Portfolio</h1>
-    <hr style="width: 100%; height: 2px;">Fall, 2018, Student: Cantekin Çelikhası-175172002
-
+</div>
+<div style="clear:both;height: 15px;"></div>
+<div style="margin-top=10px;">
+    <hr style="margin-top=10px; width: 100%; height: 2px;"> 
+    Cantekin Çelikhası-cantek41@gmail.com
         <br />
+        0552 379 89 79
+        <br />
+
     <a target="_parent" href="../index.html">Index Page</a>
     <hr style="width: 100%; height: 2px;">
     <br>
+<div/>
 
